--- a/MALO-app/src/app/auth/features/log-in/log-in.component.html
+++ b/MALO-app/src/app/auth/features/log-in/log-in.component.html
@@ -1,26 +1,28 @@
-<div class="container">
-    <div class="left"></div>
-
-    <div class="right">
-        <div class="login-box">
-            <h2>Ingresar</h2>
-            <form action="#">
-                <div class="form-group">
-                    <label for="usuario">Usuario</label>
-                    <input type="text" id="usuario" placeholder="Carlos" required>
-                </div>
-                <div class="form-group" style="position:relative;">
-                    <label for="contrasena">Contraseña</label>
-                    <input type="password" id="contrasena" placeholder="*******" required>
-                    <!-- Icono para mostrar/ocultar contraseña -->
-                </div>
-                <input type="submit" value="Iniciar sesión">
-                <div class="link-container">
-                    <a href="#">Olvidé mi contraseña</a>
-                    <div class="divider"></div>
-                    <a href="/signup">¿Aún no tienes cuenta? Regístrate</a>
-                </div>
-            </form>
+<div class="login-container">
+    <div class="container">
+        <div class="left"></div>
+        <div class="right">
+            <div class="login-box">
+                <img src="Picture1.png" alt="Logo" class="login-logo">
+                <h2>Ingresar</h2>
+                <form action="#">
+                    <div class="form-group">
+                        <label for="usuario">Usuario</label>
+                        <input type="text" id="usuario" placeholder="Carlos" required>
+                    </div>
+                    <div class="form-group" style="position:relative;">
+                        <label for="contrasena">Contraseña</label>
+                        <input type="password" id="contrasena" placeholder="*******" required>
+                    </div>
+                    <input type="submit" value="Iniciar sesión">
+                    <div class="link-container">
+                        <a href="#">Olvidé mi contraseña</a>
+                        <div class="divider"></div>
+                        <a href="/signup">¿Aún no tienes cuenta? Regístrate</a>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
-</div>
+    </div> <!-- Footer incluido en la estructura -->
+  </div>
+  
