--- a/MALO-app/src/app/shared/ui/footer/footer.component.html
+++ b/MALO-app/src/app/shared/ui/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-    <div class="container">
-      <p>&copy; 2024 Mi Aplicación. Todos los derechos reservados.</p>
+  <div class="container">
+      <p>Manos a la obra</p>
       <ul class="footer-links">
-        <li><a href="#">Política de privacidad</a></li>
-        <li><a href="#">Términos de servicio</a></li>
-        <li><a href="#">Contacto</a></li>
+          <li><a href="#">Política de privacidad</a></li>
+          <li><a href="#">Términos de servicio</a></li>
+          <li><a href="#">Contacto</a></li>
       </ul>
-    </div>
-  </footer>  
+  </div>
+</footer>
