--- a/MALO-app/src/app/shared/ui/layout/navbar.component.html
+++ b/MALO-app/src/app/shared/ui/layout/navbar.component.html
@@ -2,9 +2,15 @@
   <div class="brand">
     <img src="logoblanco.png" alt="Logo" class="logo">
   </div>
-  <ul class="nav-links">
+  <div class="hamburger" (click)="toggleMenu()" [class.active]="menuOpen">
+    <div class="line-1"></div>
+    <div class="line-2"></div>
+    <div class="line-3"></div>
+  </div>
+  <ul class="nav-links" [class.active]="menuOpen">
     <li><a routerLink="/">Sobre nosotros</a></li>
     <li><a routerLink="/login">Acceder</a></li>
-    <li><a routerLink="/signup">Registrate</a></li>
+    <li><a routerLink="/signup">Regístrate</a></li>
   </ul>
 </nav>
+
