--- a/MALO-app/src/styles.css
+++ b/MALO-app/src/styles.css
@@ -10,6 +10,9 @@ html, body {
     height: 100%;
     width: 100%;
     font-family: 'Montserrat', sans-serif;
+    position: relative;
+    padding-bottom: 3em;
+    min-height: 100vh;
 }
 
 .navbar {
