Corrección de rutas

--- a/MALO-app/src/app/shared/ui/layout/navbar.component.html
+++ b/MALO-app/src/app/shared/ui/layout/navbar.component.html
@@ -9,8 +9,8 @@
   </div>
   <ul class="nav-links" [class.active]="menuOpen">
     <li><a routerLink="/">Sobre nosotros</a></li>
-    <li><a routerLink="/login">Acceder</a></li>
-    <li><a routerLink="/signup">Regístrate</a></li>
+    <li><a routerLink="/auth/login">Acceder</a></li>
+    <li><a routerLink="/auth/sign-up">Regístrate</a></li>
   </ul>
 </nav>
 
