--- a/MALO-app/src/app/auth/features/log-in/log-in.component.html
+++ b/MALO-app/src/app/auth/features/log-in/log-in.component.html
@@ -7,14 +7,14 @@
                 <h2>Ingresar</h2>
                 <form action="#">
                     <div class="form-group">
-                        <label for="usuario">Usuario</label>
-                        <input type="text" id="usuario" placeholder="Carlos" required>
+                        <label for="email">email</label>
+                        <input type="text" name="email" [(ngModel)]="loginObj.email" id="email" placeholder="Carlos" required>
                     </div>
                     <div class="form-group" style="position:relative;">
                         <label for="contrasena">Contraseña</label>
-                        <input type="password" id="contrasena" placeholder="*******" required>
+                        <input type="password" name="contrasena" [(ngModel)]="loginObj.contrasena" id="contrasena" placeholder="*******" required>
                     </div>
-                    <input type="submit" value="Iniciar sesión">
+                    <input type="submit" (click)="onLogin()" value="Iniciar sesión">
                     <div class="link-container">
                         <a href="#">Olvidé mi contraseña</a>
                         <div class="divider"></div>
