--- a/MALO-app/src/app/auth/features/log-in/log-in.component.html
+++ b/MALO-app/src/app/auth/features/log-in/log-in.component.html
@@ -7,7 +7,7 @@
                 <h2>Ingresar</h2>
                 <form action="#">
                     <div class="form-group">
-                        <label for="email">email</label>
+                        <label for="email">Correo</label>
                         <input type="text" name="email" [(ngModel)]="loginObj.email" id="email" placeholder="Carlos" required>
                     </div>
                     <div class="form-group" style="position:relative;">
@@ -18,7 +18,7 @@
                     <div class="link-container">
                         <a href="#">Olvidé mi contraseña</a>
                         <div class="divider"></div>
-                        <a href="/signup">¿Aún no tienes cuenta? Regístrate</a>
+                        <a href="/auth/sign-up">¿Aún no tienes cuenta? Regístrate</a>
                     </div>
                 </form>
             </div>
