Corrección de navbar

--- a/MALO-app/src/app/dashboard/dashboard.component.html
+++ b/MALO-app/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
 <app-busqueda></app-busqueda>
 <app-feature-section></app-feature-section>
+<app-more-content></app-more-content>
+<app-partners-section></app-partners-section>
 <app-nosotros></app-nosotros>
