--- a/MALO-app/src/app/dashboard/feature-section/feature-section.component.css
+++ b/MALO-app/src/app/dashboard/feature-section/feature-section.component.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap; /* Permite que los elementos se distribuyan en varias filas */
     justify-content: center; /* Centra los elementos horizontalmente */
     padding: 50px;
-    background-color: #F0F0F0; /* Cambia este color según tu preferencia */
+    background-color: #ffffff; /* Cambia este color según tu preferencia */
 }
 
 /* Cada ítem de características */
