--- a/MALO-app/src/app/dashboard/nosotros/nosotros.component.css
+++ b/MALO-app/src/app/dashboard/nosotros/nosotros.component.css
@@ -1,6 +1,6 @@
 .nosotros-section {
     padding: 40px;
-    background-color: #F0F0F0; /* Puedes ajustar este color */
+    background-color: #ffffff; /* Puedes ajustar este color */
     text-align: center;
 }
 
