--- a/MALO-app/src/app/empleos/tablero.component.html
+++ b/MALO-app/src/app/empleos/tablero.component.html
@@ -1,4 +1,4 @@
-<app-nav-empleos></app-nav-empleos>
+<app-navbar></app-navbar>
 <div>
   <h1>Bienvenido al Tablero</h1>
   <p *ngIf="userName">Hola, {{ userName }}. Bienvenido de nuevo.</p>
