--- a/MALO-app/src/app/shared/ui/layout/navbar.component.css
+++ b/MALO-app/src/app/shared/ui/layout/navbar.component.css
@@ -5,7 +5,7 @@
 }
 
 /* Navbar grid styles */
-.navbar {
+.navbarEmpleos {
     background-color: #090C9B;
     display: flex;
     justify-content: space-between;
@@ -117,3 +117,13 @@
         margin: 15px 0;
     }
 }
+
+
+.profile-circle {
+    width: 40px; /* Ajusta el tamaño según lo que necesites */
+    height: 40px;
+    border-radius: 50%; /* Hace que sea un círculo */
+    background-color: #fff; /* Puedes cambiar el color o agregar una imagen de fondo */
+    margin-left: 20px; /* Espacio entre el círculo y el resto del navbar */
+  }
+  
