--- a/MALO-app/src/app/shared/ui/layout/navbar.component.html
+++ b/MALO-app/src/app/shared/ui/layout/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbarEmpleos">
   <div class="brand">
     <img src="logoblanco.png" alt="Logo" class="logo">
   </div>
@@ -9,8 +9,14 @@
   </div>
   <ul class="nav-links" [class.active]="menuOpen">
     <li><a routerLink="/">Sobre nosotros</a></li>
-    <li><a routerLink="/auth/login">Acceder</a></li>
-    <li><a routerLink="/auth/sign-up">Regístrate</a></li>
+    <!-- Mostrar enlaces si no está autenticado -->
+    <ng-container *ngIf="!isAuthenticated">
+      <li><a routerLink="/auth/login">Acceder</a></li>
+      <li><a routerLink="/auth/sign-up">Regístrate</a></li>
+    </ng-container>
+    <!-- Mostrar círculo de perfil si está autenticado -->
+    <ng-container *ngIf="isAuthenticated">
+      <li class="profile-circle"></li>
+    </ng-container>
   </ul>
 </nav>
-
