--- a/MALO-app/src/app/auth/features/log-in/log-in.component.html
+++ b/MALO-app/src/app/auth/features/log-in/log-in.component.html
@@ -5,16 +5,24 @@
             <div class="login-box">
                 <img src="Picture1.png" alt="Logo" class="login-logo">
                 <h2>Ingresar</h2>
-                <form action="#">
+                <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
                     <div class="form-group">
                         <label for="email">Correo</label>
-                        <input type="text" name="email" [(ngModel)]="loginObj.email" id="email" placeholder="Carlos" required>
+                        <input type="email" name="email" [(ngModel)]="loginObj.email" id="email" placeholder="Carlos" required>
+                        <!-- Mostrar un mensaje de error si el campo está vacío o no es válido -->
+                        <div *ngIf="loginForm.submitted && loginForm.controls['email']?.invalid" class="error">
+                            El correo es obligatorio y debe tener un formato válido.
+                        </div>
                     </div>
                     <div class="form-group" style="position:relative;">
                         <label for="contrasena">Contraseña</label>
                         <input type="password" name="contrasena" [(ngModel)]="loginObj.contrasena" id="contrasena" placeholder="*******" required>
+                        <div *ngIf="loginForm.submitted && loginForm.controls['contrasena']?.invalid" class="error">
+                            La contraseña es obligatoria.
+                        </div>
                     </div>
-                    <input type="submit" (click)="onLogin()" value="Iniciar sesión">
+                    <!-- Deshabilitar el botón si el formulario no es válido -->
+                    <input type="submit" [disabled]="loginForm.invalid" value="Iniciar sesión">
                     <div class="link-container">
                         <a href="#">Olvidé mi contraseña</a>
                         <div class="divider"></div>
@@ -24,5 +32,4 @@
             </div>
         </div>
     </div> <!-- Footer incluido en la estructura -->
-  </div>
-  
+</div>
