Diseño de barra de búsqueda

--- a/MALO-app/src/app/empleos/tablero.component.html
+++ b/MALO-app/src/app/empleos/tablero.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<app-search-bar></app-search-bar>
+
 <div>
   <h1>Bienvenido al Tablero</h1>
   <p *ngIf="userName">Hola, {{ userName }}. Bienvenido de nuevo.</p>
