Cards de empleos

--- a/MALO-app/src/app/empleos/tablero.component.html
+++ b/MALO-app/src/app/empleos/tablero.component.html
@@ -1,11 +1,13 @@
 <app-navbar></app-navbar>
 <app-search-bar></app-search-bar>
+<app-lista-empleos></app-lista-empleos>
 
+<!-- 
 <div>
   <h1>Bienvenido al Tablero</h1>
   <p *ngIf="userName">Hola, {{ userName }}. Bienvenido de nuevo.</p>
   <p *ngIf="!userName">Por favor, <a routerLink="/auth/login">inicia sesión</a> para acceder a más funciones.</p>
   
-  <!-- Botón de Cerrar Sesión -->
   <button *ngIf="userName" (click)="logout()">Cerrar sesión</button>
 </div>
+-->
