--- a/MALO-app/src/app/empleos/ui/search-bar/search-bar.component.html
+++ b/MALO-app/src/app/empleos/ui/search-bar/search-bar.component.html
@@ -1,9 +1,10 @@
 <div class="search-bar-container">
     <!-- Botón para móviles -->
     <div class="filters-button">
-      <button (click)="toggleFilters()">Mostrar filtros</button>
+      <button (click)="toggleFilters()">
+        {{ isFiltersOpen ? 'Ocultar filtros' : 'Mostrar filtros' }}
+      </button>
     </div>
-  
     <!-- Barra de búsqueda -->
     <div class="search-bar" [ngClass]="{'is-visible': isFiltersOpen}">
       <div class="search-item">
@@ -40,4 +41,3 @@
       </div>
     </div>
   </div>
-    
